Use inverted Fg color to make sure selected text is visible

--- a/Sage-Like/sidebar/rssListView.css
+++ b/Sage-Like/sidebar/rssListView.css
@@ -30,6 +30,7 @@
 
 .listview li.selected {
 	background-color: var(--bk-color-active);
+	color: var(--bk-color-active-contrasted);
 }
 
 .listview li.selected:focus {
