--- a/Sage-Like/sidebar/rssTreeView.css
+++ b/Sage-Like/sidebar/rssTreeView.css
@@ -103,6 +103,7 @@
 
 .treeview li.selected > .rtvCaption {
 	background-color: var(--bk-color-active);
+	color: var(--bk-color-active-contrasted);
 }
 
 .treeview li.selected:focus > .rtvCaption {
